@@ -1,17 +1,0 @@
-cpu		: Texas Instruments, Inc. - SuperSparc 50
-fpu		: SuperSparc on-chip FPU
-promlib		: Version 3 Revision 2
-prom		: 2.14
-type		: sun4m
-ncpus probed	: 4
-ncpus active	: 4
-Cpu0Bogo	: 49.86
-Cpu1Bogo	: 49.97
-Cpu2Bogo	: 49.97
-Cpu3Bogo	: 49.97
-MMU type	: TI Viking/MXCC
-contexts	: 65536
-CPU0		: online
-CPU1		: online
-CPU2		: online
-CPU3		: online
