@@ -1,10 +1,0 @@
-cpu		: TI UltraSparc I   (SpitFire)
-fpu		: UltraSparc I integrated FPU
-promlib		: Version 3 Revision 11
-prom		: 3.11.1
-type		: sun4u
-ncpus probed	: 1
-ncpus active	: 1
-Cpu0Bogo	: 285.08
-Cpu0ClkTck	: 000000000885b768
-MMU Type	: Spitfire
